--- a/.gitignore
+++ b/.gitignore
@@ -4,12 +4,16 @@
 /node_modules
 /.pnp
 .pnp.js
+package-lock.json
 
 # testing
 /coverage
 
 # production
 /build
+
+# public assets
+/public
 
 # misc
 .DS_Store
